--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.1.*",
         "illuminate/html": "^5.0",
-        "illuminate/http": "^5.1"
+        "illuminate/http": "^5.1",
+        "laracasts/flash": "^1.3"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
